render prep